pizza-order-test/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pizza
spec:
  hosts:
    - "*"
  gateways:
    - pizza-gateway
  http:
    - match:
        - uri:
            prefix: /pizza-order-test/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: pizza-order-service
            port:
              number: 80
